sign in page done

--- a/frontend/css/import.css
+++ b/frontend/css/import.css
@@ -10136,6 +10136,183 @@ header {
 .product-description .product-option .mgtop40 {
   margin-top: 40px; }
 
+.sign-bgcolor {
+  background: #f9f3e5; }
+  .sign-bgcolor .padd80 {
+    padding: 80px 0; }
+
+.sign-in {
+  margin-bottom: 26px; }
+  .sign-in .main-head {
+    font-family: 'pop-sb'; }
+  .sign-in .lbl-head {
+    font-family: 'work-sansR';
+    letter-spacing: 1px;
+    margin-bottom: 15px; }
+  .sign-in .form-control {
+    height: 50px;
+    background: transparent; }
+    .sign-in .form-control:focus {
+      border: 1px solid #ccc; }
+  .sign-in .password-control input {
+    height: 100%;
+    border: none;
+    background: transparent; }
+  .sign-in .password-control input[type="password"]:focus {
+    outline: none; }
+  .sign-in .password-control .forgot-pass {
+    font-size: 12px;
+    font-family: 'work-sansR';
+    line-height: 3;
+    color: #282828; }
+  .sign-in .btn--custom, .sign-in .deal-section .shop-btn, .deal-section .sign-in .shop-btn {
+    color: #ffffff;
+    background-color: #282828;
+    border-color: #282828;
+    font-size: 14px;
+    padding: 10px 20px; }
+    .sign-in .btn--custom:focus, .sign-in .deal-section .shop-btn:focus, .deal-section .sign-in .shop-btn:focus, .sign-in .btn--custom.focus, .sign-in .deal-section .focus.shop-btn, .deal-section .sign-in .focus.shop-btn {
+      color: #ffffff;
+      background-color: #0f0f0f;
+      border-color: black; }
+    .sign-in .btn--custom:hover, .sign-in .deal-section .shop-btn:hover, .deal-section .sign-in .shop-btn:hover {
+      color: #ffffff;
+      background-color: #0f0f0f;
+      border-color: #090909; }
+    .sign-in .btn--custom:active, .sign-in .deal-section .shop-btn:active, .deal-section .sign-in .shop-btn:active, .sign-in .btn--custom.active, .sign-in .deal-section .active.shop-btn, .deal-section .sign-in .active.shop-btn,
+    .open > .sign-in .btn--custom.dropdown-toggle,
+    .open > .sign-in .deal-section .dropdown-toggle.shop-btn, .deal-section
+    .open > .sign-in .dropdown-toggle.shop-btn {
+      color: #ffffff;
+      background-color: #0f0f0f;
+      border-color: #090909; }
+      .sign-in .btn--custom:active:hover, .sign-in .deal-section .shop-btn:active:hover, .deal-section .sign-in .shop-btn:active:hover, .sign-in .btn--custom:active:focus, .sign-in .deal-section .shop-btn:active:focus, .deal-section .sign-in .shop-btn:active:focus, .sign-in .btn--custom:active.focus, .sign-in .deal-section .shop-btn:active.focus, .deal-section .sign-in .shop-btn:active.focus, .sign-in .btn--custom.active:hover, .sign-in .deal-section .active.shop-btn:hover, .deal-section .sign-in .active.shop-btn:hover, .sign-in .btn--custom.active:focus, .sign-in .deal-section .active.shop-btn:focus, .deal-section .sign-in .active.shop-btn:focus, .sign-in .btn--custom.active.focus, .sign-in .deal-section .active.focus.shop-btn, .deal-section .sign-in .active.focus.shop-btn,
+      .open > .sign-in .btn--custom.dropdown-toggle:hover,
+      .open > .sign-in .deal-section .dropdown-toggle.shop-btn:hover, .deal-section
+      .open > .sign-in .dropdown-toggle.shop-btn:hover,
+      .open > .sign-in .btn--custom.dropdown-toggle:focus,
+      .open > .sign-in .deal-section .dropdown-toggle.shop-btn:focus, .deal-section
+      .open > .sign-in .dropdown-toggle.shop-btn:focus,
+      .open > .sign-in .btn--custom.dropdown-toggle.focus,
+      .open > .sign-in .deal-section .dropdown-toggle.focus.shop-btn, .deal-section
+      .open > .sign-in .dropdown-toggle.focus.shop-btn {
+        color: #ffffff;
+        background-color: black;
+        border-color: black; }
+    .sign-in .btn--custom:active, .sign-in .deal-section .shop-btn:active, .deal-section .sign-in .shop-btn:active, .sign-in .btn--custom.active, .sign-in .deal-section .active.shop-btn, .deal-section .sign-in .active.shop-btn,
+    .open > .sign-in .btn--custom.dropdown-toggle,
+    .open > .sign-in .deal-section .dropdown-toggle.shop-btn, .deal-section
+    .open > .sign-in .dropdown-toggle.shop-btn {
+      background-image: none; }
+    .sign-in .btn--custom.disabled:hover, .sign-in .deal-section .disabled.shop-btn:hover, .deal-section .sign-in .disabled.shop-btn:hover, .sign-in .btn--custom.disabled:focus, .sign-in .deal-section .disabled.shop-btn:focus, .deal-section .sign-in .disabled.shop-btn:focus, .sign-in .btn--custom.disabled.focus, .sign-in .deal-section .disabled.focus.shop-btn, .deal-section .sign-in .disabled.focus.shop-btn, .sign-in .btn--custom[disabled]:hover, .sign-in .deal-section [disabled].shop-btn:hover, .deal-section .sign-in [disabled].shop-btn:hover, .sign-in .btn--custom[disabled]:focus, .sign-in .deal-section [disabled].shop-btn:focus, .deal-section .sign-in [disabled].shop-btn:focus, .sign-in .btn--custom[disabled].focus, .sign-in .deal-section [disabled].focus.shop-btn, .deal-section .sign-in [disabled].focus.shop-btn,
+    fieldset[disabled] .sign-in .btn--custom:hover,
+    fieldset[disabled] .sign-in .deal-section .shop-btn:hover, .deal-section
+    fieldset[disabled] .sign-in .shop-btn:hover,
+    fieldset[disabled] .sign-in .btn--custom:focus,
+    fieldset[disabled] .sign-in .deal-section .shop-btn:focus, .deal-section
+    fieldset[disabled] .sign-in .shop-btn:focus,
+    fieldset[disabled] .sign-in .btn--custom.focus,
+    fieldset[disabled] .sign-in .deal-section .focus.shop-btn, .deal-section
+    fieldset[disabled] .sign-in .focus.shop-btn {
+      background-color: #282828;
+      border-color: #282828; }
+    .sign-in .btn--custom .badge, .sign-in .deal-section .shop-btn .badge, .deal-section .sign-in .shop-btn .badge {
+      color: #282828;
+      background-color: #ffffff; }
+
+.social-signin {
+  margin-bottom: 26px; }
+  .social-signin .social-head {
+    font-family: 'pop-sb';
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    letter-spacing: 1px; }
+    .social-signin .social-head:before {
+      content: '';
+      width: 28%;
+      display: block;
+      border-top: 1px solid #282828;
+      left: 0;
+      position: absolute;
+      top: 50%; }
+    .social-signin .social-head:after {
+      content: '';
+      width: 28%;
+      display: block;
+      border-top: 1px solid #282828;
+      right: 0;
+      position: absolute;
+      top: 50%; }
+  .social-signin .btn--custom, .social-signin .deal-section .shop-btn, .deal-section .social-signin .shop-btn {
+    min-height: 50px;
+    font-size: 14px;
+    padding: 10px 12px; }
+    .social-signin .btn--custom img, .social-signin .deal-section .shop-btn img, .deal-section .social-signin .shop-btn img {
+      width: 30px;
+      margin-right: 10px; }
+
+.create-acc .create-head {
+  text-align: center;
+  font-family: 'work-sansR';
+  color: #282828;
+  margin: 0; }
+
+.create-acc .btn--custom, .create-acc .deal-section .shop-btn, .deal-section .create-acc .shop-btn {
+  color: #ffffff;
+  background-color: #282828;
+  border-color: #282828;
+  font-size: 14px;
+  padding: 10px 20px; }
+  .create-acc .btn--custom:focus, .create-acc .deal-section .shop-btn:focus, .deal-section .create-acc .shop-btn:focus, .create-acc .btn--custom.focus, .create-acc .deal-section .focus.shop-btn, .deal-section .create-acc .focus.shop-btn {
+    color: #ffffff;
+    background-color: #0f0f0f;
+    border-color: black; }
+  .create-acc .btn--custom:hover, .create-acc .deal-section .shop-btn:hover, .deal-section .create-acc .shop-btn:hover {
+    color: #ffffff;
+    background-color: #0f0f0f;
+    border-color: #090909; }
+  .create-acc .btn--custom:active, .create-acc .deal-section .shop-btn:active, .deal-section .create-acc .shop-btn:active, .create-acc .btn--custom.active, .create-acc .deal-section .active.shop-btn, .deal-section .create-acc .active.shop-btn,
+  .open > .create-acc .btn--custom.dropdown-toggle,
+  .open > .create-acc .deal-section .dropdown-toggle.shop-btn, .deal-section
+  .open > .create-acc .dropdown-toggle.shop-btn {
+    color: #ffffff;
+    background-color: #0f0f0f;
+    border-color: #090909; }
+    .create-acc .btn--custom:active:hover, .create-acc .deal-section .shop-btn:active:hover, .deal-section .create-acc .shop-btn:active:hover, .create-acc .btn--custom:active:focus, .create-acc .deal-section .shop-btn:active:focus, .deal-section .create-acc .shop-btn:active:focus, .create-acc .btn--custom:active.focus, .create-acc .deal-section .shop-btn:active.focus, .deal-section .create-acc .shop-btn:active.focus, .create-acc .btn--custom.active:hover, .create-acc .deal-section .active.shop-btn:hover, .deal-section .create-acc .active.shop-btn:hover, .create-acc .btn--custom.active:focus, .create-acc .deal-section .active.shop-btn:focus, .deal-section .create-acc .active.shop-btn:focus, .create-acc .btn--custom.active.focus, .create-acc .deal-section .active.focus.shop-btn, .deal-section .create-acc .active.focus.shop-btn,
+    .open > .create-acc .btn--custom.dropdown-toggle:hover,
+    .open > .create-acc .deal-section .dropdown-toggle.shop-btn:hover, .deal-section
+    .open > .create-acc .dropdown-toggle.shop-btn:hover,
+    .open > .create-acc .btn--custom.dropdown-toggle:focus,
+    .open > .create-acc .deal-section .dropdown-toggle.shop-btn:focus, .deal-section
+    .open > .create-acc .dropdown-toggle.shop-btn:focus,
+    .open > .create-acc .btn--custom.dropdown-toggle.focus,
+    .open > .create-acc .deal-section .dropdown-toggle.focus.shop-btn, .deal-section
+    .open > .create-acc .dropdown-toggle.focus.shop-btn {
+      color: #ffffff;
+      background-color: black;
+      border-color: black; }
+  .create-acc .btn--custom:active, .create-acc .deal-section .shop-btn:active, .deal-section .create-acc .shop-btn:active, .create-acc .btn--custom.active, .create-acc .deal-section .active.shop-btn, .deal-section .create-acc .active.shop-btn,
+  .open > .create-acc .btn--custom.dropdown-toggle,
+  .open > .create-acc .deal-section .dropdown-toggle.shop-btn, .deal-section
+  .open > .create-acc .dropdown-toggle.shop-btn {
+    background-image: none; }
+  .create-acc .btn--custom.disabled:hover, .create-acc .deal-section .disabled.shop-btn:hover, .deal-section .create-acc .disabled.shop-btn:hover, .create-acc .btn--custom.disabled:focus, .create-acc .deal-section .disabled.shop-btn:focus, .deal-section .create-acc .disabled.shop-btn:focus, .create-acc .btn--custom.disabled.focus, .create-acc .deal-section .disabled.focus.shop-btn, .deal-section .create-acc .disabled.focus.shop-btn, .create-acc .btn--custom[disabled]:hover, .create-acc .deal-section [disabled].shop-btn:hover, .deal-section .create-acc [disabled].shop-btn:hover, .create-acc .btn--custom[disabled]:focus, .create-acc .deal-section [disabled].shop-btn:focus, .deal-section .create-acc [disabled].shop-btn:focus, .create-acc .btn--custom[disabled].focus, .create-acc .deal-section [disabled].focus.shop-btn, .deal-section .create-acc [disabled].focus.shop-btn,
+  fieldset[disabled] .create-acc .btn--custom:hover,
+  fieldset[disabled] .create-acc .deal-section .shop-btn:hover, .deal-section
+  fieldset[disabled] .create-acc .shop-btn:hover,
+  fieldset[disabled] .create-acc .btn--custom:focus,
+  fieldset[disabled] .create-acc .deal-section .shop-btn:focus, .deal-section
+  fieldset[disabled] .create-acc .shop-btn:focus,
+  fieldset[disabled] .create-acc .btn--custom.focus,
+  fieldset[disabled] .create-acc .deal-section .focus.shop-btn, .deal-section
+  fieldset[disabled] .create-acc .focus.shop-btn {
+    background-color: #282828;
+    border-color: #282828; }
+  .create-acc .btn--custom .badge, .create-acc .deal-section .shop-btn .badge, .deal-section .create-acc .shop-btn .badge {
+    color: #282828;
+    background-color: #ffffff; }
+
 #fancybox-loading,
 .fancybox-close,
 .fancybox-next span,
