--- a/frontend/views/template/header.html
+++ b/frontend/views/template/header.html
@@ -7,7 +7,7 @@
             <div class="navbar-right custom-right">
                 <ul class="nav navbar-nav log-in">
                     <li><a href="#">Login</a></li>
-                    <li><a href="#">Sign In</a></li>
+                    <li><a ui-sref="signin">Sign In</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>
