--- a/frontend/views/template/header.html
+++ b/frontend/views/template/header.html
@@ -6,8 +6,8 @@
             </div>
             <div class="navbar-right custom-right">
                 <ul class="nav navbar-nav log-in">
-                    <li><a href="#">Login</a></li>
-                    <li><a ui-sref="signin">Sign In</a></li>
+                    <li><a ui-sref="signin">Login</a></li>
+                    <li><a ui-sref="signup">Sign Up</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>
