--- a/frontend/views/content/home.html
+++ b/frontend/views/content/home.html
@@ -193,7 +193,7 @@
                             <img ng-src="{{product.img}}" alt=" " class="img-responsive ">
                         </a>
                         <div class="product-block__text">
-                            <p>{{product.desc}}</p>
+                            <p class="product-detail">{{product.desc}}</p>
                             <button class="btn btn-default btn--custom">{{product.btntxt}}</button>
                         </div>
                     </div>
