--- a/frontend/sass/_main.scss
+++ b/frontend/sass/_main.scss
@@ -767,6 +767,12 @@ header {
                 transform: translate(0, -50%);
             }
         }
+        .product-block__text {
+            margin-top: 16px;
+            .product-detail {
+                font-family: 'work-sansR';
+            }
+        }
     }
 }
 
@@ -914,6 +920,9 @@ header {
     .addcart-section {
         background: #e7e3d8;
         padding-bottom: 60px;
+        .paddLR {
+            padding: 0 146px 0 78px;
+        }
         .addcart-slider {
             .flex-control-thumbs li {
                 width: 33.33%;
@@ -1010,7 +1019,7 @@ header {
                     margin: 0;
                 }
                 .inblock {
-                    vertical-align: bottom;
+                    vertical-align: middle;
                     .form-group {
                         .form-control {
                             width: 16%;
@@ -1023,6 +1032,9 @@ header {
                         }
                         label {
                             vertical-align: bottom;
+                        }
+                        .count-days {
+                            color: #cf9c69;
                         }
                     }
                 }
@@ -1060,6 +1072,19 @@ header {
             }
         }
         .accordion-block {
+            .head3 {
+                font-family: 'pop-sb';
+            }
+            .content-1 {
+                font-family: 'work-sansSB';
+                margin-bottom: 18px;
+                p {
+                    margin: 0;
+                }
+            }
+            .content-2 {
+                font-family: 'work-sansR';
+            }
             .panel-group {
                 .panel-heading {
                     padding: 0;
@@ -1362,6 +1387,13 @@ header {
             margin: 0 auto;
             border-top: 1px solid $dark-grey;
         }
+        .product-list {
+            margin-top: 20px;
+        }
+    }
+    .bg-rose {
+        background: #f9f3e5;
+        padding: 80px 0;
     }
     .ticket {
         position: absolute;
@@ -1384,9 +1416,6 @@ header {
         }
     }
     .product-block__text {
-        p {
-            margin: 0 !important;
-        }
         .product-name {
             margin-top: 14px;
             color: $base-darkcolor;
@@ -1395,6 +1424,17 @@ header {
         .product-head {
             color: $dark-grey;
             font-family: 'pop-sb' !important;
+        }
+        .offer-price {
+            color: $base-darkcolor;
+            font-family: 'pop-sb';
+            .inblock {
+                margin: 10px 0;
+            }
+            p:first-child {
+                color: $dark-grey;
+                text-decoration: line-through;
+            }
         }
     }
 }
